<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GenericStorage-Client</string>
    <string name="action_createFile">createFile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_displayConflict">Display Conflict</string>
    <string name="action_login">Login</string>
    <string name="action_display_account">Show Account</string>
    <string name="action_sync">Request Sync</string>
    <string name="action_cancelSync">Cancel Sync</string>
    <string name="action_logSyncSettings">Log Sync Settings</string>

</resources>