<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_createFile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_createFile" android:onClick="createFile">
    </item>
    <item android:id="@+id/action_login" android:orderInCategory="110" android:onClick="login" android:showAsAction="never" android:title="@string/action_login"></item>
    <item android:id="@+id/action_display_account" android:showAsAction="never" android:onClick="displayAccount" android:orderInCategory="120" android:title="@string/action_display_account"></item>
    <item android:id="@+id/action_sync" android:onClick="doSync" android:title="@string/action_sync"></item>
    <item android:id="@+id/action_cancelSync" android:onClick="cancelSync" android:title="@string/action_cancelSync"></item>
    <item android:id="@+id/action_logSync" android:onClick="logSyncStatus" android:title="@string/action_logSyncSettings"></item>

</menu>